RESOLVED FIXED95701
REGRESSION(r126132): MediaSlider and MediaVolumeSlider thumbs don't match mouse when dragged
https://bugs.webkit.org/show_bug.cgi?id=95701
Summary REGRESSION(r126132): MediaSlider and MediaVolumeSlider thumbs don't match mou...
Keishi Hattori
Reported 2012-09-03 16:48:57 PDT
MediaSlider and MediaVolumeSlider thumbs don't match mouse when dragged. Caused by r126132.
Attachments
Patch (5.46 KB, patch)
2012-09-04 01:52 PDT, Keishi Hattori
no flags
Patch (5.48 KB, patch)
2012-09-04 18:19 PDT, Keishi Hattori
no flags
Keishi Hattori
Comment 1 2012-09-04 01:52:44 PDT
Kent Tamura
Comment 2 2012-09-04 02:13:56 PDT
Comment on attachment 161989 [details] Patch Looks ok.
Keishi Hattori
Comment 3 2012-09-04 18:19:42 PDT
WebKit Review Bot
Comment 4 2012-09-04 21:53:13 PDT
Comment on attachment 162144 [details] Patch Clearing flags on attachment: 162144 Committed r127553: <http://trac.webkit.org/changeset/127553>
WebKit Review Bot
Comment 5 2012-09-04 21:53:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.