REGRESSION(r126132): MediaSlider and MediaVolumeSlider thumbs don't match mouse when dragged https://bugs.webkit.org/show_bug.cgi?id=95701

Reviewed by Kent Tamura.

Source/WebCore:

MediaSlider and MediaVolumeSlider thumbs didn't match mouse when dragged because of the negative margin applied to the thumb.

Test: platform/chromium/media/media-volume-slider-hit-test.html

* html/shadow/SliderThumbElement.cpp:
(WebCore::SliderThumbElement::setPositionFromPoint): Account for margins when calculating the position.

LayoutTests:

* platform/chromium/media/media-volume-slider-hit-test-expected.txt: Added.
* platform/chromium/media/media-volume-slider-hit-test.html: Added.


Canonical link: https://commits.webkit.org/113691@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127553 268f45cc-cd09-0410-ab3c-d52691b4dbfc